Dileep,Vijay | 496 | Fixing UI issues - alignment, other option text box in medical history.

--- a/src/main/webapp/styles/medical-history.css
+++ b/src/main/webapp/styles/medical-history.css
@@ -8,7 +8,7 @@
 }
 
 .medical_history .questions .question {
-    height: 25px;
+    height: 26px;
 }
 
 .medical_history .questions .question input {
@@ -30,5 +30,10 @@ span.comments input {
 
 span.ailements_label {
    font-weight: bold;
+}
+
+span.comments label{
+    margin-right: 1em;
+    text-align: right;
 }
 
