--- a/src/main/webapp/styles/standard.css
+++ b/src/main/webapp/styles/standard.css
@@ -496,9 +496,9 @@ fieldset th {
 }
 
 .system_categories .category .ailments .ailment .state {
-    width: 150px;
+    width: 160px;
 }
 
 .system_categories .category .ailments .ailment .description {
-    width: 150px;
+    width: 160px;
 }
